add registry protocol